...
        onUpdateValue={setEmail}
        value={email}
        keyboardType="email-address"
        isInvalid={invalid}
        textContentType="username"
        autoComplete="email"
        testID="forgot-password-email-input"
      />
      <View style={styles.buttonContainer}>
        <AnimatedLoadingButton
          onPress={submitHandler}
          loading={loading}
          testID="forgot-password-submit-button"
        >
          {t("send_reset_link")}
        </AnimatedLoadingButton>
      </View>
    </FormWrapper>
  );
...
