...
          {t("verification_sent_after")}
        </Text>
        <View style={styles.buttonContainer}>
          <AnimatedLoadingButton
            onPress={handleResend}
            loading={resending}
            testID="resend-letter-button"
          >
            {t("resend_letter")}
          </AnimatedLoadingButton>
        </View>
      </View>
    </Layout>
...
